--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for JSON-Patch
 
-0.01    Date/time
-        - First version, released on an unsuspecting world.
+0.01    2018-10-09
+        - Initial release.
 
